@@ -5,17 +5,17 @@ package io.clientcore.core.http.models;
 
 import io.clientcore.core.annotation.Metadata;
 import io.clientcore.core.implementation.http.HttpRequestAccessHelper;
-import io.clientcore.core.util.ClientLogger;
+import io.clientcore.core.instrumentation.logging.ClientLogger;
 import io.clientcore.core.util.binarydata.BinaryData;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Objects;
 
 import static io.clientcore.core.annotation.TypeConditions.FLUENT;
 
 /**
- * The outgoing HTTP request. This class provides ways to construct it with an {@link HttpMethod}, {@link URL},
+ * The outgoing HTTP request. This class provides ways to construct it with an {@link HttpMethod}, {@link URI},
  * {@link HttpHeader} and request body.
  */
 @Metadata(conditions = FLUENT)
@@ -26,36 +26,35 @@ public class HttpRequest {
     static {
         HttpRequestAccessHelper.setAccessor(new HttpRequestAccessHelper.HttpRequestAccessor() {
             @Override
-            public int getRetryCount(HttpRequest httpRequest) {
-                return httpRequest.getRetryCount();
+            public int getTryCount(HttpRequest httpRequest) {
+                return httpRequest.getTryCount();
             }
 
             @Override
-            public HttpRequest setRetryCount(HttpRequest httpRequest, int retryCount) {
-                return httpRequest.setRetryCount(retryCount);
+            public HttpRequest setTryCount(HttpRequest httpRequest, int tryCount) {
+                return httpRequest.setTryCount(tryCount);
             }
         });
     }
 
     private HttpMethod httpMethod;
-    private URL url;
+    private URI uri;
     private HttpHeaders headers;
     private BinaryData body;
     private ServerSentEventListener serverSentEventListener;
     private RequestOptions requestOptions;
-    private int retryCount;
+    private int tryCount;
 
     /**
      * Create a new {@link HttpRequest} instance.
      *
      * @param httpMethod The request {@link HttpMethod}.
-     * @param url The target address to send the request to as a {@link URL}.
-     *
-     * @throws NullPointerException if {@code url} is {@code null}.
+     * @param uri The target address to send the request to as a {@link URI}.
+     * @throws NullPointerException if {@code uri} is {@code null}.
      */
-    public HttpRequest(HttpMethod httpMethod, URL url) {
+    public HttpRequest(HttpMethod httpMethod, URI uri) {
         this.httpMethod = Objects.requireNonNull(httpMethod, "'httpMethod' cannot be null");
-        this.url = Objects.requireNonNull(url, "'url' cannot be null");
+        this.uri = Objects.requireNonNull(uri, "'uri' cannot be null");
         this.headers = new HttpHeaders();
         this.requestOptions = RequestOptions.none();
     }
@@ -64,15 +63,14 @@ public class HttpRequest {
      * Create a new {@link HttpRequest} instance.
      *
      * @param httpMethod The request {@link HttpMethod}.
-     * @param url The target address to send the request to.
-     *
-     * @throws NullPointerException if {@code url} is {@code null}.
-     * @throws IllegalArgumentException If {@code url} cannot be parsed into a valid {@link URL}.
+     * @param uri The target address to send the request to.
+     * @throws NullPointerException if {@code uri} is {@code null}.
+     * @throws IllegalArgumentException If {@code uri} cannot be parsed into a valid {@link URI}.
      */
-    public HttpRequest(HttpMethod httpMethod, String url) {
+    public HttpRequest(HttpMethod httpMethod, String uri) {
         this.httpMethod = Objects.requireNonNull(httpMethod, "'httpMethod' cannot be null");
 
-        setUrl(url);
+        setUri(uri);
 
         this.headers = new HttpHeaders();
         this.requestOptions = RequestOptions.none();
@@ -91,9 +89,7 @@ public class HttpRequest {
      * Set the request {@link HttpMethod}.
      *
      * @param httpMethod The request {@link HttpMethod}.
-     *
      * @return The updated {@link HttpRequest}.
-     *
      * @throws NullPointerException if {@code httpMethod} is {@code null}.
      */
     public HttpRequest setHttpMethod(HttpMethod httpMethod) {
@@ -103,25 +99,23 @@ public class HttpRequest {
     }
 
     /**
-     * Get the target address as a {@link URL}.
+     * Get the target address as a {@link URI}.
      *
-     * @return The target address as a {@link URL}.
+     * @return The target address as a {@link URI}.
      */
-    public URL getUrl() {
-        return url;
+    public URI getUri() {
+        return uri;
     }
 
     /**
      * Set the target address to send the request to.
      *
-     * @param url The target address as a {@link URL}.
-     *
+     * @param uri The target address as a {@link URI}.
      * @return The updated {@link HttpRequest}.
-     *
-     * @throws NullPointerException if {@code url} is {@code null}.
+     * @throws NullPointerException if {@code uri} is null.
      */
-    public HttpRequest setUrl(URL url) {
-        this.url = Objects.requireNonNull(url, "'url' cannot be null");
+    public HttpRequest setUri(URI uri) {
+        this.uri = Objects.requireNonNull(uri, "'uri' cannot be null");
 
         return this;
     }
@@ -129,19 +123,16 @@ public class HttpRequest {
     /**
      * Set the target address to send the request to.
      *
-     * @param url The target address as a {@link URL}.
-     *
+     * @param uri The target address as a {@link URI}.
      * @return The updated {@link HttpRequest}.
-     *
-     * @throws NullPointerException if {@code url} is {@code null}.
-     * @throws IllegalArgumentException If {@code url} cannot be parsed into a valid {@link URL}.
+     * @throws NullPointerException if {@code uri} is {@code null}.
+     * @throws IllegalArgumentException If {@code uri} cannot be parsed into a valid {@link URI}.
      */
-    @SuppressWarnings("deprecation")
-    public HttpRequest setUrl(String url) {
+    public HttpRequest setUri(String uri) {
         try {
-            this.url = new URL(Objects.requireNonNull(url, "'url' cannot be null"));
-        } catch (MalformedURLException ex) {
-            throw LOGGER.logThrowableAsError(new IllegalArgumentException("'url' must be a valid URL.", ex));
+            this.uri = new URI(Objects.requireNonNull(uri, "'uri' cannot be null"));
+        } catch (URISyntaxException ex) {
+            throw LOGGER.logThrowableAsError(new IllegalArgumentException("'uri' must be a valid URI.", ex));
         }
 
         return this;
@@ -160,7 +151,6 @@ public class HttpRequest {
      * Set the request {@link HttpHeaders headers}.
      *
      * @param headers The {@link HttpHeaders headers} to set.
-     *
      * @return The updated {@link HttpRequest}.
      */
     public HttpRequest setHeaders(HttpHeaders headers) {
@@ -187,7 +177,6 @@ public class HttpRequest {
      * to indicate the length of the content, or use {@code Transfer-Encoding: chunked}.</p>
      *
      * @param content The request content.
-     *
      * @return The updated {@link HttpRequest}.
      */
     public HttpRequest setBody(BinaryData content) {
@@ -214,7 +203,6 @@ public class HttpRequest {
      * Set the request {@link RequestOptions options}.
      *
      * @param requestOptions The request {@link RequestOptions options}.
-     *
      * @return The updated {@link HttpRequest}.
      */
     public HttpRequest setRequestOptions(RequestOptions requestOptions) {
@@ -236,7 +224,6 @@ public class HttpRequest {
      * Set an event stream {@link ServerSentEventListener listener} for this request.
      *
      * @param serverSentEventListener The {@link ServerSentEventListener listener} to set for this request.
-     *
      * @return The updated {@link HttpRequest}.
      */
     public HttpRequest setServerSentEventListener(ServerSentEventListener serverSentEventListener) {
@@ -246,23 +233,24 @@ public class HttpRequest {
     }
 
     /**
-     * Gets the number of times the request has been retried.
+     * Gets the number of times the request has been attempted. It's 0 during the first attempt
+     * and increments after attempt is made.
      *
-     * @return The number of times the request has been retried.
+     * @return The number of times the request has been attempted.
      */
-    private int getRetryCount() {
-        return retryCount;
+    private int getTryCount() {
+        return tryCount;
     }
 
     /**
-     * Sets the number of times the request has been retried.
+     * Sets the number of times the request has been attempted. It's 0 during the first attempt
+     * and increments after attempt is made.
      *
-     * @param retryCount The number of times the request has been retried.
-     *
+     * @param tryCount The number of times the request has been attempted.
      * @return The updated {@link HttpRequest} object.
      */
-    private HttpRequest setRetryCount(int retryCount) {
-        this.retryCount = retryCount;
+    private HttpRequest setTryCount(int tryCount) {
+        this.tryCount = tryCount;
 
         return this;
     }
